css/custom.css
body {
  height: 100vh;
}

.search-field {
    width: 100% !important;
}

.page-title {
    margin-top: 150px;
}

.flexslider {
    height: 620px;
}

.probootstrap-wrap-banner h1 {
    font-size: 3.5rem;
    line-height: 3.5rem;
    padding-top: 40px;
    padding-bottom: 20px;
    font-weight: bold;
}

.probootstrap-wrap-banner h2 {
    font-size: 1.2rem;
    font-weight: bold;
}

.probootstrap-main-nav .btn {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.probootstrap-home-search {
    margin-top: 50px;
    text-align: left;
    margin-left: -60px;
    padding: 30px 60px;
}

.probootstrap-home-search .heading {
    font-size: 18px;
}

.probootstrap-home-search form {
    margin-bottom: 0;
}

.probootstrap-logo {
    font-size: 27px;
    padding-left: 0;
}

.probootstrap-header {
    padding-top: 20px;
    padding-bottom: 20px;
}

.probootstrap-breadcrumbs {
    margin-bottom: 5px;
}

.masthead-img {
    position: absolute;
    top: -160px;
    left: 320px;
    opacity: 80%;
}

@media screen and (max-width: 768px) {
    .masthead-img {
        top: -30px;
        left: 130px;
    }

    .flexslider {
        height: 449px;
    }

    .probootstrap-home-search-container {
        padding: 0;
        margin-top: 60px;
    }

    .probootstrap-home-search {
        margin: 0;
        padding: 20px;
        border-radius: 0;
        box-shadow: none;
    }

    .probootstrap-wrap-banner h1 {
        font-size: 1.3rem;
        line-height: 1.3rem;
        padding-top: 10px;
        margin-bottom: 0;
    }

    .probootstrap-wrap-banner h2 {
        font-size: 0.8rem;
        line-height: 1rem;
        margin-top: 0;
    }
}

html .cog-row .cog-col:not(td), :root:root:root:root:root .cog-row .cog-col:not(td) {
    margin-bottom: 2rem !important;
}

html .cog-checkable .el-radio__label, html .cog-checkable .el-checkbox__label, :root:root:root:root:root .cog-checkable .el-radio__label, :root:root:root:root:root .cog-checkable .el-checkbox__label {
    padding-left: 25px !important;
}

html .cog-page-progress--steps a::before, :root:root:root:root:root .cog-page-progress--steps a::before {
    padding-top: 2px;
}

.el-html .cog-cognito--styled .el-checkbox__inner, :root:root:root:root:root .cog-cognito--styled .el-checkbox__inner {
    margin-top: 3px;
}

.el-date-editor {
    width: 160px !important;
}

.el-textarea__inner {
    height: 150px !important;
}

